--- a/projects/demo/src/index.html
+++ b/projects/demo/src/index.html
@@ -11,11 +11,13 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <script id="lcu-reg">
       window.LCU = {
-        APIRoot: 'http://localhost:52235',
+        APIRoot: 'https://www.fathym-it.com',
         Application: {
           ID: ''
         },
-        State: {}
+        State: {
+          UsernameMock: 'michael.gearhardt@fathym.com'
+        }
       };
     </script>
   </head>
