--- a/projects/demo/src/index.html
+++ b/projects/demo/src/index.html
@@ -17,6 +17,7 @@
           ID: ''
         },
         State: {
+          Environment: 'local',
           UsernameMock: 'michael.gearhardt@fathym.com'
         }
       };
