--- a/projects/demo/src/index.html
+++ b/projects/demo/src/index.html
@@ -11,14 +11,15 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <script id="lcu-reg">
       window.LCU = {
-        APIRoot: 'https://www.fathym-int.com',
-        // APIRoot: 'https://localhost:44387',
+        // APIRoot: 'https://www.fathym-int.com',
+        APIRoot: 'https://localhost:44387',
         Application: {
           ID: ''
         },
         State: {
-          Environment: 'local',
+          // Environment: 'local',
           UsernameMock: 'michael.gearhardt@fathym.com'
+
         }
       };
     </script>
